# scand

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: nand_flash.cpp.59172446DD9B49FD.idx  nand_flash.hpp.41B754A8D6A11CF9.idx  nand_flash_tb.cpp.90CCCCD2C0CC575E.idx  sc_attribute.h.E0486BA1A2780E7B.idx  sc_big_ops.h.0423AA23C6E1A9BD.idx  sc_bigint.h.BBFFB24A0986C9B0.idx  sc_bigint_inlines.h.97438F3B91BB1BBE.idx  sc_biguint.h.25A43F3516548B3A.idx  sc_biguint_inlines.h.9C72E739EC8D6144.idx  sc_bit.h.6D1AB5BD9CDF1AB6.idx  sc_bit_ids.h.9F3797621C711F45.idx  sc_bit_proxies.h.6CFB941F93D73C7C.idx  sc_buffer.h.D0585B5B46505FF9.idx  sc_bv.h.C29578D1655B534C.idx  sc_bv_base.h.E7515618CB56489F.idx  sc_clock.h.093404561EA2A593.idx  sc_clock_ports.h.7F9DA955E2B0E273.idx  sc_cmnhdr.h.648D7F7C36A39D85.idx  sc_communication_ids.h.BF90EA05859408D0.idx  sc_concatref.h.42BE2C291CCE46AE.idx  sc_constants.h.31E6503D94A1B911.idx  sc_context.h.BB35A953431C8314.idx  sc_dynamic_processes.h.B69D829AF56E90A2.idx  sc_event.h.97544599D694657C.idx  sc_event_finder.h.D6BB9FB37BD49F9F.idx  sc_event_queue.h.C8BD4477B5EADE59.idx  sc_except.h.D1FC27ECA6D4A05C.idx  sc_export.h.8888C144A09A6B9B.idx  sc_externs.h.7E95CE43743CB905.idx  sc_fifo.h.2F0B83A10952F58F.idx  sc_fifo_ifs.h.161BAFF2CA1AC771.idx  sc_fifo_ports.h.1D13741B47026928.idx  sc_fx_ids.h.82BE461587A81310.idx  sc_fxdefs.h.FA90EFC31084DC51.idx  sc_hash.h.C00E050B88526921.idx  sc_host_mutex.h.4DC5E353B90C34F5.idx  sc_initializer_function.h.0647257C14CADDB1.idx  sc_int.h.9FDC71D79BC19D40.idx  sc_int_base.h.FE78DE16C9DED3D3.idx  sc_int_ids.h.B9140CAE6660EE26.idx  (+71 more)
src/: nand_flash.cpp  nand_flash.hpp
test/: nand_flash_tb.cpp
